--- a/src/app/components/wine-search/wine-search.component.html
+++ b/src/app/components/wine-search/wine-search.component.html
@@ -4,15 +4,15 @@
     <h1 class="text-primary-700 text-center m-0 font-weight-light">
       Search Our Wines!
     </h1>
-    <p class="text-center m-0 text-primary-400">
+    <p class="text-center m-0 text-primary-400 px-4">
       Choose 3 of your favorite wine characteristics and hit search!
     </p>
-    <p class="text-center m-0 text-primary-400">
-      For example: 'Fruity', 'Pinot', 'Canada' and see all wines on our list
-      matching those characteristics!
+    <p class="text-center m-0 text-primary-400 px-6 text-sm">
+      For example: <strong>'Fruity', 'Pinot Noir', 'Canada'</strong> and see all
+      our matching wines!
     </p>
   </div>
-  <form class="flex justify-content-center mt-4 gap-3 flex-wrap">
+  <form class="flex justify-content-center mt-4 gap-3 flex-wrap pb-4">
     <div>
       <label></label>
       <input type="text" pInputText />
