Updated header color in admin wine list to change based on wine style.

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -22,7 +22,8 @@
                 border:
                   !isValid && _adminService.isWineFormGroupInvalid(wineControl)
                     ? '1px solid red'
-                    : 'none'
+                    : 'none',
+                background: _adminService.wineStyleColorSelect(winesArray.at($index).get('wineStyle')?.value),
               }"
             >
               <div class="flex">
