--- a/src/app/components/wine-search/wine-search.component.html
+++ b/src/app/components/wine-search/wine-search.component.html
@@ -27,6 +27,7 @@
   <form
     [formGroup]="searchForm"
     class="flex flex-column align-items-center pb-4"
+    (submit)="wineSearch()"
   >
     <div
       class="flex justify-content-center mt-2 gap-3 flex-wrap pb-3 px-2"
@@ -54,5 +55,5 @@
       </button>
     </div>
   </form>
-  <app-wine-display></app-wine-display>
+  <app-wine-display [filteredWines]="filteredWines"></app-wine-display>
 </main>
